<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.FinalActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:id="@+id/felicidades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/felicidades"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/final_tamaño"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/tu_pizza"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/final_mombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/textview01"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/final_con"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/con"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/final_ingredientes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/textview02"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/final_ytu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/y_tu"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/final_bebida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/textview03"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:text="@string/prepara"
                    android:textAlignment="textEnd"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/dinero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textview04"
                    android:textAlignment="viewStart"
                    android:textSize="24sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="20dp"
                android:src="@drawable/ic_action_name" />

            <TextView
                android:id="@+id/mensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ha_sido_enviada"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:paddingBottom="100dp"/>
        </LinearLayout>
    </ScrollView>


</android.support.design.widget.CoordinatorLayout>